Fix Dockerfile path and PostgreSQL configuration

--- a/backend/Dockerfile.postgres
+++ b/backend/Dockerfile.postgres
@@ -1,7 +1,10 @@
+# Use the official PostgreSQL image
 FROM postgres:15-alpine
 
-# Set environment variables
-ENV POSTGRES_DB=njerenje
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+# These environment variables MUST be set for the container to initialize
+ENV POSTGRES_DB=${POSTGRES_DB}
+ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD} # 👈 This line is CRITICAL
 
+# The database initialization scripts will run automatically
+# Expose the PostgreSQL port
 EXPOSE 5432
